fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -173,8 +173,17 @@ html {
   }
 }
 
+.stuf1 {
+  display: inline-table;
+  padding: 20px 60px;
+}
+
 #about-section {
   padding: 5vh 20vw 5vh 20vw;
+}
+
+.infodiv {
+  text-align: left;
 }
 
 #info-section {
@@ -277,6 +286,7 @@ a:focus {
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
 
 .sponsor-row > :not(:only-child) {
   padding: 1rem;
